--- a/index.html
+++ b/index.html
@@ -1,151 +1,113 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>html test</title>
-<style>
-
-/********** Base styles **********/
-* {
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>test_html_test</title>
+    <link rel="stylesheet" href="j.css">
+    <style>
+      *{
   box-sizing: border-box;
+  margin: 0px;
 }
-h1 {
-  margin-bottom: 15px;
+h1{
+  margin: 20px;
+  text-align: center;;
+  font-family: sans-serif;
+  color:#660033;
+}
+.Dish_section{
+  background-color: grey;
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+
+  padding: 45px 10px 10px 10px;
+
+  position: relative;
+  float:left;
+
+  box-sizing: border-box;
+
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #000000;
+  font-style: oblique;
+  font-weight: 900;
+  font-size: 1.9vw;
+  margin: 1% 0.5% 0.5% 0.5%;
+
+}
+.section_title{
+  position: absolute;
+  right:0px;
+  top:0px;
+
+  margin:0px;
+
+  width:auto;
+
   text-align: center;
-  color: rgb(14, 13, 13);
-  font-family: fantasy;
-margin:auto;
-        
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+
+  font-family: serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 2.4vw;
+  color: #1f4068;
+
 }
-#h4{
-    background-color: rgb(218, 93, 118);
-     }
-        #h3{
-            background-color: rgb(248, 8, 8);
-        }
-        #h2{
-            background-color: rgb(247, 231, 8);
-        }
-
-p {
-  border: 1px solid black;
-  background-color: darkgrey;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: black;
+.f1{
+  background-color:#ecb5a5;
 }
-h4{ 
-            border:2px solid black;
-            text-align: left;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-        }
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
+.f2{
+  background-color:rgb(255, 8, 0);
+}
+.f3{
+  background-color:#fbff05
 }
 
-/********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
+@media(min-width:992px){
+  .Dish_section{
+    width:32.3333333333%;
   }
 }
-
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid green;
+@media (min-width:768px) and (max-width:991px) {
+  .col-md-1,.col-md-2{
+    width: 49%;
   }
-  .col-md-1 {
-    width: 8.33%;
+  .col-md-3{
+    width: 99%;
   }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
+  *{
+    font-size: 2.7vw;
   }
 }
-
-</style>
-</head>
-<body>
-<h1>our menu</h1>
-
-<div class="row">
-  <div class="col-lg-3 col-md-6"><div><h4 id="h4">Chicken</h4><p>lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magno aliqu.ut enim ad minim veniam, quis nostrud exercitation uilamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
-  <div class="col-lg-3 col-md-6"><h4 id="h3">Beef</h4><p>lorem ipsum dolo sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minnim veniam,quis nostrud exercitation ullamco laboris nisi nisi ut aliquip ex ea commodo consequat.</p></div>
-  <div class="col-lg-3 col-md-6"><h4 id="h2">Sushi</h4><p>lorem ipsum dolor sit amet,consectetur adipisicingelit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim as minim veniam,quis nostrud exergitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p></div>
-</div>
-
-</body>
+@media (max-width:767px) {
+  .Dish_section{
+    width:99%;
+  }
+  *{
+    font-size: 2.8vw;
+  }
+}
+    </style>
+  </head>
+  <body>
+    <h1>our menu</h1>
+    <section class="Dish_section col-md-1 ">
+      <h1 class="section_title f1" >veg rice</h1>
+      <p>lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magno aliqu.ut enim ad minim veniam, quis nostrud exercitation uilamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+    <section class="Dish_section col-md-2">
+      <h1 class="section_title f2">roti</h1>
+      <p>lorem ipsum dolo sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minnim veniam,quis nostrud exercitation ullamco laboris nisi nisi ut aliquip ex ea commodo consequat. </p>
+    </section>
+    <section class="Dish_section col-md-3">
+      <h1 class="section_title f3">Sushi</h1>
+      <p>lorem ipsum dolor sit amet,consectetur adipisicingelit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim as minim veniam,quis nostrud exergitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+  </body>
 </html>
