--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>test_html_test</title>
-    <link rel="stylesheet" href="j.css">
     <style>
       *{
   box-sizing: border-box;
@@ -29,10 +28,8 @@ h1{
 
   box-sizing: border-box;
 
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   color: #000000;
-  font-style: oblique;
-  font-weight: 900;
   font-size: 1.9vw;
   margin: 1% 0.5% 0.5% 0.5%;
 
